#03 Utility-First Approach

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,18 @@
   <title>Tailwind CSS - Sumit - Practice</title>
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
-<body>
-  <div class=" bg-gray-500 text-center mt-64">Hello Tailwind CSS</div>
+
+<body class="h-screen flex items-center justify-center bg-gray-100">
+  <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2">
+    <img class="h-24 mx-auto rounded-full ring-4 ring-green-400" src="/images/logo.png" alt="Learn with Sumit logo" />
+    <div class="text-center space-y-2">
+      <div class="space-y-0.5">
+        <p class="text-lg text-black font-semibold">Learn with Sumit</p>
+        <p class="text-gray-500 font-medium">YouTube Channel</p>
+      </div>
+      <button class="px-4 py-1 border border-purple-200 rounded-full text-sm text-purple-600 font-semibold">Visit now</button>
+    </div>
+  </div>
 </body>
+
 </html>
