--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">  <!-- class="dark" for dark mood-->
 
 <head>
   <meta charset="UTF-8">
@@ -9,8 +9,23 @@
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
-<!-- //-------------------------------  #06 Dark mode variant  ------------------------------------ -->
+<!-- //------------------------------- #07 Composing Utilities with @apply Directive ------------------------------------ -->
 <body class="h-screen flex items-center justify-center bg-gray-100 dark:bg-gray-900">
+  <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2 sm:flex sm:items-center sm:py-4 sm:space-y-0 sm:space-x-6 dark:bg-gray-800 sm:dark:hover:bg-gray-700">
+    <img class="h-24 mx-auto rounded-full ring-4 ring-green-400 sm:mx-0 sm:flex-shrink-0 transform hover:scale-105 duration-500" src="/images/logo.png" alt="Learn with Sumit logo" />
+    <div class="text-center space-y-2 sm:text-left">
+      <div class="space-y-0.5">
+        <p class="text-lg text-black font-semibold dark:text-gray-300">Learn with Sumit</p>
+        <p class="text-gray-500 font-medium dark:text-gray-400">YouTube Channel</p>
+      </div>
+      <button class="btn btn-purple">Visit now</button> <button class="btn btn-green ml-2">Website</button>
+    </div>
+  </div>
+</body>
+
+
+<!-- //------------------------------- #06 Dark mode variant ------------------------------------ -->
+<!-- <body class="h-screen flex items-center justify-center bg-gray-100 dark:bg-gray-900">
   <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2 sm:flex sm:items-center sm:py-4 sm:space-y-0 sm:space-x-6 dark:bg-gray-800 sm:dark:hover:bg-gray-700">
     <img class="h-24 mx-auto rounded-full ring-4 ring-green-400 sm:mx-0 sm:flex-shrink-0 transform hover:scale-105 duration-500" src="/images/logo.png" alt="Learn with Sumit logo" />
     <div class="text-center space-y-2 sm:text-left">
@@ -21,7 +36,7 @@
       <button class="px-4 py-1 border border-purple-200 rounded-full text-sm text-purple-600 font-semibold hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2 dark:text-purple-400 dark:focus:ring-offset-gray-800 dark:focus:border-transparent">Visit now</button>
     </div>
   </div>
-</body>
+</body> -->
 
 
 <!-- //--------------------------- #03 Utility-First Approach ------------------------------------ -->
