--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
+<!-- //------------------------- #09 @variants Directive --------------------------- -->
+<body>
+  <div class="hover:rotate-0 block">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minusr, repellendus!
+  </div>
+</body>
+
+
 <!-- //------------------------- #08 Tailwind @layer Directive - Understand Tailwind Layers --------------------------- -->
-<body class="h-screen flex items-center justify-center bg-gray-100 dark:bg-gray-900">
+<!-- <body class="h-screen flex items-center justify-center bg-gray-100 dark:bg-gray-900">
   <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-2 sm:flex sm:items-center sm:py-4 sm:space-y-0 sm:space-x-6 dark:bg-gray-800 sm:dark:hover:bg-gray-700">
     <img class="h-24 mx-auto rounded-full ring-4 ring-green-400 sm:mx-0 sm:flex-shrink-0 transform hover:scale-105 duration-500" src="/images/logo.png" alt="Learn with Sumit logo" />
     <div class="text-center space-y-2 sm:text-left">
@@ -21,7 +29,7 @@
       <button class="btn btn-purple rounded-sm">Visit now</button> <button class="btn btn-green ml-2">Website</button>
     </div>
   </div>
-</body>
+</body> -->
 
 
 <!-- //------------------------------- #07 Composing Utilities with @apply Directive ------------------------------------ -->
