#10 @responsive and @screen Directives

--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
-<!-- //------------------------- #09 @variants Directive --------------------------- -->
+<!-- //------------------------- #10 @responsive and @screen Directives --------------------------- -->
 <body>
+  <div class="sm:bg-gradient-responsive">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minus ullam voluptatem quis eos commodi facere, dolor animi quam non, qui neque porro velit corporis temporibus labore est. Consequatur, repellendus!
+  </div>
+  <div class="bg-gradient-screen text-yellow-600">
+    screen  screen  screen  screen  screen  screen  screen  screen  screen  screen  screen 
+  </div>
+</body>
+
+
+<!-- //------------------------- #09 @variants Directive --------------------------- -->
+<!-- <body>
   <div class="hover:rotate-0 block">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minusr, repellendus!
   </div>
-</body>
+</body> -->
 
 
 <!-- //------------------------- #08 Tailwind @layer Directive - Understand Tailwind Layers --------------------------- -->
