#11 theme() and screen() - Tailwind Functions

--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
-<!-- //------------------------- #10 @responsive and @screen Directives --------------------------- -->
+<!-- //------------------------- #11 theme() and screen() - Tailwind Functions --------------------------- -->
 <body>
+  <div class="text-blue-900">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minus ullam voluptatem quis eos commodi facere, dolor animi quam non, qui neque porro velit corporis temporibus labore est. Consequatur, repellendus!</div>
+</body>
+
+<!-- //------------------------- #10 @responsive and @screen Directives --------------------------- -->
+<!-- <body>
   <div class="sm:bg-gradient-responsive">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minus ullam voluptatem quis eos commodi facere, dolor animi quam non, qui neque porro velit corporis temporibus labore est. Consequatur, repellendus!
   </div>
   <div class="bg-gradient-screen text-yellow-600">
     screen  screen  screen  screen  screen  screen  screen  screen  screen  screen  screen 
   </div>
-</body>
+</body> -->
 
 
 <!-- //------------------------- #09 @variants Directive --------------------------- -->
