--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
-<!-- //------------------------- #12 Tailwind Configurations --------------------------- -->
+<!-- //------------------------- #13 PostCSS Installation --------------------------- -->
 <body>
+  <div class="text-blue-900">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minus ullam voluptatem quis eos commodi facere, dolor animi quam non, qui neque porro velit corporis temporibus labore est. Consequatur, repellendus!</div>
+</body>
+
+
+<!-- //------------------------- #12 Tailwind Configurations --------------------------- -->
+<!-- <body>
   <div class="bg-yellow-400 text-blue-450"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minus ullam voluptatem quis eos commodi facere, dolor animi quam non </div> <br>
   <div class="bg-regal-blue"> legal blue legal blue legal blue legal blue legal blue </div>
-</body>
+</body> -->
 
 
 <!-- //------------------------- #11 theme() and screen() - Tailwind Functions --------------------------- -->
