#14 Just in Time

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
-<!-- //------------------------- #13 PostCSS Installation --------------------------- -->
+<!-- //------------------------- #14 Just In Time (JIT) --------------------------- -->
 <body>
-  <div class="text-blue-900">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minus ullam voluptatem quis eos commodi facere, dolor animi quam non, qui neque porro velit corporis temporibus labore est. Consequatur, repellendus!</div>
+  <div class="text-blue-900 bg-gray-300 font-bold">Now we are appling Just in Time (JIT). Lorem ipsum dolor sit amet est. Consequatur, repellendus!</div>
 </body>
+
+
+<!-- //------------------------- #13 PostCSS Installation --------------------------- -->
+<!-- <body>
+  <div class="text-blue-900">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minus ullam voluptatem quis eos commodi facere, dolor animi quam non, qui neque porro velit corporis temporibus labore est. Consequatur, repellendus!</div>
+</body> -->
 
 
 <!-- //------------------------- #12 Tailwind Configurations --------------------------- -->
