--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
-<!-- //------------------------- #14 Just In Time (JIT) --------------------------- -->
+<!-- //------------------------- #15 Theme Configuration ++ #16 Extend Theme --------------------------- -->
 <body>
-  <div class="text-blue-900 bg-gray-300 font-bold">Now we are appling Just in Time (JIT). Lorem ipsum dolor sit amet est. Consequatur, repellendus!</div>
+  <div class="bg-gray-300 font-bold">Now we are appling Theme Configuration. Lorem ipsum dolor sit amet est. Consequatur, repellendus!</div>
 </body>
+
+
+<!-- //------------------------- #14 Just In Time (JIT) --------------------------- -->
+<!-- <body>
+  <div class="text-blue-900 bg-gray-300 font-bold">Now we are appling Just in Time (JIT). Lorem ipsum dolor sit amet est. Consequatur, repellendus!</div>
+</body> -->
 
 
 <!-- //------------------------- #13 PostCSS Installation --------------------------- -->
