--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="./output/tailwind.css" />
 </head>
 
-<!-- //------------------------- #15 Theme Configuration ++ #16 Extend Theme --------------------------- -->
+<!-- //------------------ #15 Theme Configuration ++ #16 Extend Theme ++ #17 Extend Variants ------------------------ -->
 <body>
-  <div class="bg-gray-300 font-bold">Now we are appling Theme Configuration. Lorem ipsum dolor sit amet est. Consequatur, repellendus!</div>
+  <div class="bg-gray-300 font-bold"> for these part please see our txt file named with "Tailwind CSS.txt"</div>
 </body>
 
 
